# rag-pipeline

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: sources.md
eval/: evaluate.py  visualize.py
scripts/: check-pii.sh  download_data.sh
src/rag_pipeline/: api.py  chunkers.py  embed.py  ingest.py  query.py  run.py  schemas.py  store.py
tests/: test_api.py  test_chunkers.py  test_embed.py  test_query.py  test_store.py
