[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG system for EPA water treatment regulations with multiple chunking strategies and evaluation"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "llama-index-vector-stores-postgres",
    "llama-index-embeddings-voyageai",
    "voyageai",
    "llama-index-llms-anthropic",
    "psycopg[binary]",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ragas",
    "pre-commit",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
